# cozycoder

./: .editorconfig  .gitignore  .gitmodules  .tool-versions  CLAUDE.md  Cargo.toml  Dockerfile  README.md  deno.json  gleam.toml  index.js  mcp.json  mise.toml  mix.exs  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
assets/css/: app.css
assets/js/: app.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
crates/app/: Cargo.toml  Trunk.toml  index.html
crates/app/src/: app.rs  main.rs  notebook.rs
crates/cozycoder/: Cargo.toml
crates/daemon/: Cargo.toml
crates/desktop/: Cargo.toml  tauri.conf.json
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: document.rs  handler.rs  lib.rs
crates/ui/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
lib/: cozycoder_web.ex
lib/cozycoder/: application.ex  projects.ex  release.ex
lib/cozycoder_web/: endpoint.ex  router.ex  telemetry.ex
src/: App.css  App.tsx  actions.ts  app.rs  cli.rs  cozycoder.gleam  cozycoder_ffi.mjs  handler.rs  index.tsx  lib.rs  main.rs  mcp.rs  tui.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/api/: chats.ts  messages.ts
src/components/: ChatList.tsx  ChatView.tsx  EditableText.test.tsx  EditableText.tsx  EmptyState.tsx  Message.tsx  MessageInput.test.tsx  MessageInput.tsx  Prompt.test.tsx  Prompt.tsx  prompt.test.tsx  prompt.tsx
src/mcp/: server.rs
src/store/: chatStore.ts
website/: config.toml  docusaurus.config.ts  netlify.toml  package-lock.json
(+27 files in other folders)
