[package]
name = "cozycoder-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "^0.7.7", features = ["csr"] }
wasm-bindgen = "^0.2.100"
wasm-bindgen-futures = "^0.4.50"
js-sys = "^0.3.77"
serde = { version = "^1.0.218", features = ["derive"] }
serde-wasm-bindgen = "^0.6.5"
console_error_panic_hook = "^0.1.7"

[workspace]
members = ["src-tauri"]
