[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "^0.7.0", features = ["csr"] }
web-sys = { version = "^0.3.77", features = ["Window", "Document", "Storage"] }
wasm-bindgen = "^0.2.78"
console_error_panic_hook = "^0.1.7"
js-sys = "^0.3.77"
uuid = { version = "^1.16.0", features = ["v4", "js"] }
